--- a/index.html
+++ b/index.html
@@ -157,19 +157,19 @@
 				display: none !important;
 			}
 
-			#menumponf6~div label {
+			#menuxcofkh~div label {
 				border-radius: 0% !important;
 			}
 
-			#menumponf6:checked~.menu-links {
+			#menuxcofkh:checked~.menu-links {
 				background-color: #000000 !important;
 			}
 
-			#menumponf6:checked~.menu-links a {
+			#menuxcofkh:checked~.menu-links a {
 				color: #ffffff !important;
 			}
 
-			#menumponf6:checked~.menu-links span {
+			#menuxcofkh:checked~.menu-links span {
 				color: #ffffff !important;
 			}
 		}
@@ -542,7 +542,7 @@
 											<!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding-right: 15px; padding-left: 15px; padding-top: 0px; padding-bottom: 0px; font-family: Tahoma, sans-serif"><![endif]-->
 											<div style="color:#000000;font-family:Montserrat, Trebuchet MS, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Tahoma, sans-serif;line-height:1.5;padding-top:0px;padding-right:15px;padding-bottom:0px;padding-left:15px;">
 												<div class="txtTinyMce-wrapper" style="font-size: 12px; line-height: 1.5; color: #000000; font-family: Montserrat, Trebuchet MS, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Tahoma, sans-serif; mso-line-height-alt: 18px;">
-													<p style="margin: 0; font-size: 12px; line-height: 1.5; word-break: break-word; text-align: center; mso-line-height-alt: 18px; margin-top: 0; margin-bottom: 0;"><em><strong><span style="font-size: 10px; color: #9c0303;">New Listing!</span></strong></em></p>
+													<p style="margin: 0; font-size: 12px; line-height: 1.5; word-break: break-word; text-align: center; mso-line-height-alt: 18px; margin-top: 0; margin-bottom: 0;"><em><strong><span style="font-size: 10px; color: #9c0303;">NEW LISTING</span></strong></em></p>
 												</div>
 											</div>
 											<!--[if mso]></td></tr></table><![endif]-->
@@ -647,7 +647,7 @@
 											<!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding-right: 15px; padding-left: 15px; padding-top: 0px; padding-bottom: 0px; font-family: Tahoma, sans-serif"><![endif]-->
 											<div style="color:#000000;font-family:Montserrat, Trebuchet MS, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Tahoma, sans-serif;line-height:1.5;padding-top:0px;padding-right:15px;padding-bottom:0px;padding-left:15px;">
 												<div class="txtTinyMce-wrapper" style="font-size: 12px; line-height: 1.5; color: #000000; font-family: Montserrat, Trebuchet MS, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Tahoma, sans-serif; mso-line-height-alt: 18px;">
-													<p style="margin: 0; font-size: 12px; line-height: 1.5; word-break: break-word; text-align: center; mso-line-height-alt: 18px; margin-top: 0; margin-bottom: 0;"><em><strong><span style="font-size: 10px; color: #9c0303;">New Listing!</span></strong></em></p>
+													<p style="margin: 0; font-size: 12px; line-height: 1.5; word-break: break-word; text-align: center; mso-line-height-alt: 18px; margin-top: 0; margin-bottom: 0;"><em><strong><span style="font-size: 10px; color: #9c0303;">NEW LISTING</span></strong></em></p>
 												</div>
 											</div>
 											<!--[if mso]></td></tr></table><![endif]-->
@@ -752,7 +752,7 @@
 											<!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding-right: 15px; padding-left: 15px; padding-top: 0px; padding-bottom: 0px; font-family: Tahoma, sans-serif"><![endif]-->
 											<div style="color:#000000;font-family:Montserrat, Trebuchet MS, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Tahoma, sans-serif;line-height:1.5;padding-top:0px;padding-right:15px;padding-bottom:0px;padding-left:15px;">
 												<div class="txtTinyMce-wrapper" style="font-size: 12px; line-height: 1.5; color: #000000; font-family: Montserrat, Trebuchet MS, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Tahoma, sans-serif; mso-line-height-alt: 18px;">
-													<p style="margin: 0; font-size: 12px; line-height: 1.5; word-break: break-word; text-align: center; mso-line-height-alt: 18px; margin-top: 0; margin-bottom: 0;"><em><strong><span style="font-size: 10px; color: #9c0303;">New Listing!</span></strong></em></p>
+													<p style="margin: 0; font-size: 12px; line-height: 1.5; word-break: break-word; text-align: center; mso-line-height-alt: 18px; margin-top: 0; margin-bottom: 0;"><em><strong><span style="font-size: 10px; color: #9c0303;">NEW LISTING</span></strong></em></p>
 												</div>
 											</div>
 											<!--[if mso]></td></tr></table><![endif]-->
@@ -857,7 +857,7 @@
 											<!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding-right: 15px; padding-left: 15px; padding-top: 0px; padding-bottom: 0px; font-family: Tahoma, sans-serif"><![endif]-->
 											<div style="color:#000000;font-family:Montserrat, Trebuchet MS, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Tahoma, sans-serif;line-height:1.5;padding-top:0px;padding-right:15px;padding-bottom:0px;padding-left:15px;">
 												<div class="txtTinyMce-wrapper" style="font-size: 12px; line-height: 1.5; color: #000000; font-family: Montserrat, Trebuchet MS, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Tahoma, sans-serif; mso-line-height-alt: 18px;">
-													<p style="margin: 0; font-size: 12px; line-height: 1.5; word-break: break-word; text-align: center; mso-line-height-alt: 18px; margin-top: 0; margin-bottom: 0;"><em><strong><span style="font-size: 10px; color: #9c0303;">New Listing!</span></strong></em></p>
+													<p style="margin: 0; font-size: 12px; line-height: 1.5; word-break: break-word; text-align: center; mso-line-height-alt: 18px; margin-top: 0; margin-bottom: 0;"><em><strong><span style="font-size: 10px; color: #9c0303;">NEW LISTING</span></strong></em></p>
 												</div>
 											</div>
 											<!--[if mso]></td></tr></table><![endif]-->
@@ -1040,7 +1040,7 @@
 											<!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding-right: 15px; padding-left: 15px; padding-top: 0px; padding-bottom: 0px; font-family: Tahoma, sans-serif"><![endif]-->
 											<div style="color:#000000;font-family:Montserrat, Trebuchet MS, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Tahoma, sans-serif;line-height:1.5;padding-top:0px;padding-right:15px;padding-bottom:0px;padding-left:15px;">
 												<div class="txtTinyMce-wrapper" style="font-size: 12px; line-height: 1.5; color: #000000; font-family: Montserrat, Trebuchet MS, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Tahoma, sans-serif; mso-line-height-alt: 18px;">
-													<p style="margin: 0; font-size: 12px; line-height: 1.5; word-break: break-word; text-align: center; mso-line-height-alt: 18px; margin-top: 0; margin-bottom: 0;"><em><strong><span style="font-size: 10px; color: #9c0303;">New Listing!</span></strong></em></p>
+													<p style="margin: 0; font-size: 12px; line-height: 1.5; word-break: break-word; text-align: center; mso-line-height-alt: 18px; margin-top: 0; margin-bottom: 0;"><em><strong><span style="font-size: 10px; color: #9c0303;">NEW LISTING</span></strong></em></p>
 												</div>
 											</div>
 											<!--[if mso]></td></tr></table><![endif]-->
@@ -1145,7 +1145,7 @@
 											<!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding-right: 15px; padding-left: 15px; padding-top: 0px; padding-bottom: 0px; font-family: Tahoma, sans-serif"><![endif]-->
 											<div style="color:#000000;font-family:Montserrat, Trebuchet MS, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Tahoma, sans-serif;line-height:1.5;padding-top:0px;padding-right:15px;padding-bottom:0px;padding-left:15px;">
 												<div class="txtTinyMce-wrapper" style="font-size: 12px; line-height: 1.5; color: #000000; font-family: Montserrat, Trebuchet MS, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Tahoma, sans-serif; mso-line-height-alt: 18px;">
-													<p style="margin: 0; font-size: 12px; line-height: 1.5; word-break: break-word; text-align: center; mso-line-height-alt: 18px; margin-top: 0; margin-bottom: 0;"><em><strong><span style="font-size: 10px; color: #9c0303;">New Listing!</span></strong></em></p>
+													<p style="margin: 0; font-size: 12px; line-height: 1.5; word-break: break-word; text-align: center; mso-line-height-alt: 18px; margin-top: 0; margin-bottom: 0;"><em><strong><span style="font-size: 10px; color: #9c0303;">NEW LISTING</span></strong></em></p>
 												</div>
 											</div>
 											<!--[if mso]></td></tr></table><![endif]-->
@@ -1250,7 +1250,7 @@
 											<!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding-right: 15px; padding-left: 15px; padding-top: 0px; padding-bottom: 0px; font-family: Tahoma, sans-serif"><![endif]-->
 											<div style="color:#000000;font-family:Montserrat, Trebuchet MS, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Tahoma, sans-serif;line-height:1.5;padding-top:0px;padding-right:15px;padding-bottom:0px;padding-left:15px;">
 												<div class="txtTinyMce-wrapper" style="font-size: 12px; line-height: 1.5; color: #000000; font-family: Montserrat, Trebuchet MS, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Tahoma, sans-serif; mso-line-height-alt: 18px;">
-													<p style="margin: 0; font-size: 12px; line-height: 1.5; word-break: break-word; text-align: center; mso-line-height-alt: 18px; margin-top: 0; margin-bottom: 0;"><em><strong><span style="font-size: 10px; color: #9c0303;">New Listing!</span></strong></em></p>
+													<p style="margin: 0; font-size: 12px; line-height: 1.5; word-break: break-word; text-align: center; mso-line-height-alt: 18px; margin-top: 0; margin-bottom: 0;"><em><strong><span style="font-size: 10px; color: #9c0303;">NEW LISTING</span></strong></em></p>
 												</div>
 											</div>
 											<!--[if mso]></td></tr></table><![endif]-->
@@ -1355,7 +1355,7 @@
 											<!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding-right: 15px; padding-left: 15px; padding-top: 0px; padding-bottom: 0px; font-family: Tahoma, sans-serif"><![endif]-->
 											<div style="color:#000000;font-family:Montserrat, Trebuchet MS, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Tahoma, sans-serif;line-height:1.5;padding-top:0px;padding-right:15px;padding-bottom:0px;padding-left:15px;">
 												<div class="txtTinyMce-wrapper" style="font-size: 12px; line-height: 1.5; color: #000000; font-family: Montserrat, Trebuchet MS, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Tahoma, sans-serif; mso-line-height-alt: 18px;">
-													<p style="margin: 0; font-size: 12px; line-height: 1.5; word-break: break-word; text-align: center; mso-line-height-alt: 18px; margin-top: 0; margin-bottom: 0;"><em><strong><span style="font-size: 10px; color: #9c0303;">New Listing!</span></strong></em></p>
+													<p style="margin: 0; font-size: 12px; line-height: 1.5; word-break: break-word; text-align: center; mso-line-height-alt: 18px; margin-top: 0; margin-bottom: 0;"><em><strong><span style="font-size: 10px; color: #9c0303;">NEW LISTING</span></strong></em></p>
 												</div>
 											</div>
 											<!--[if mso]></td></tr></table><![endif]-->
